// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMAGLr sc-jgPyTC eyCtVz sc-gSYDnn jJgXuM"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMAGLr sc-jgPyTC eWDZKw sc-gSYDnn jJgXuM"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMAGLr sc-jgPyTC kWYLGm sc-gSYDnn jJgXuM"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMAGLr sc-jgPyTC eyCtVz sc-gSYDnn jJgXuM"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
